# satan-solver

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  solver  todo.txt
src/: Parameters.h  Solver.cpp  Solver.h  Test.cpp  solver.cpp  solver.h  test.cpp
src/types/: Clause.cpp  Clause.h  ClauseDatabase.cpp  ClauseDatabase.h  Constants.h  Literal.cpp  Literal.h  VarDatabase.cpp  VarDatabase.h  clause.cpp  clause.h  constants.h  literal.cpp  literal.h  model.h  vector.h
src/utils/: Helpers.h  Parser.cpp  Parser.h  helpers.cpp  helpers.h  parser.h
tests/: simple.cnf
tests/uf50/: uf50-03.cnf
